# dot-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: actions.yaml
dot-rs-testing-app/: Cargo.toml  Dioxus.toml  dot_examples
dot-rs-testing-app/assets/: style.css
dot-rs-testing-app/src/: main.rs
dot_examples/basic/: README.md  a_to_4_nodes.dot  a_to_b_and_c.dot  a_to_c_and_b_to_a.dot  b_and_c_to_a.dot  flux_capacitor.dot  in_spread.dot  reverse_scramble.dot  simple_scramble.dot  t1_2_1.dot  t2_1_2.dot
dot_examples/crossings/: README.md  complex_crossing.dot  must_cross.dot
dot_examples/cyclic/: README.md  complex_cyclic.dot  three_cyclic.dot  two_cyclic.dot
dot_examples/graphviz.org/: README.md  go_package_imports.dot  profile.dot  unix.dot  world.dot
dot_examples/layout/: large_example.dot
dot_examples/tse_paper/: README.md  example_2_3.dot  example_2_3_extended.dot  example_2_3_scrambled.dot  example_2_3_simplified.dot
graphvis_test_app/: Cargo.toml  Dioxus.toml
graphvis_test_app/src/: main.rs
src/: api.rs  dot.pest  dot_examples.rs  dot_parser.rs  graph.rs  lib.rs  main.rs  svg.rs
src/graph/: crossing_lines.rs  dot_parser.rs  edge.rs  network_simplex.rs  node.rs  rank_orderings.rs  snapshot.rs
src/graph/network_simplex/: cutvalue.rs  heap.rs  spanning_tree.rs  sub_tree.rs
tests/: dot_to_svg.rs
